--- a/mistertoy-frontend/src/assets/style/main.css
+++ b/mistertoy-frontend/src/assets/style/main.css
@@ -9,14 +9,13 @@
 @import 'base/forms.css';
 
 /* Components */
-/* @import 'cmps/ToyIndex.css'; */
+@import 'cmps/ToyIndex.css';
 @import 'cmps/AppHeader.css';
 @import 'cmps/AppFooter.css';
 @import 'cmps/UserMsg.css';
-
-/* @import 'cmps/ToyFilter.css';
+@import 'cmps/ToyFilter.css';
 @import 'cmps/ToyList.css';
-@import 'cmps/ToyPreview.css'; */
+@import 'cmps/ToyPreview.css';
 
 
 .app {
